<resources>
    <string name="app_name">Kukuliner</string>
    <string name="description_1">Kamu bingung cari Kuliner yang Unik?\nTenang ada Kukuliner</string>
    <string name="description_2">Aplikasi penjelajah Kuliner khas daerah Pulau Jawa\ndi tempat kamu berada</string>
    <string name="next">Next</string>
    <string name="search_food">Search Food…</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="food_image">Food Image</string>
    <string name="food_name">Food Name</string>
    <string name="estimate_price">Estimate Price</string>
    <string name="view_on_maps">View on Maps</string>
    <string name="estimate_price_rp">Estimate Price: %1$s</string>
    <string name="description_food">Food Description</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="skip_welcome_screen">Skip Welcome Screen</string>

    <string name="location_not_found">Location Not Found</string>
    <string name="location_error">Failed Get Location: %1$s</string>
    <string name="location_need_permission">Location Permission Needed</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="location_found">Location Found</string>
    <string name="location_error_name">Failed Get Location Name: %1$s</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_recommendation_found">No Recommendation Found</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="gallery" translatable="false">Gallery</string>
    <string name="scan_food" translatable="false">Scan Food</string>
    <string name="gambar_kosong" translatable="false">Gambar Kosong</string>
    <string name="nama_makanan" translatable="false">Nama Makanan</string>
    <string name="similiar_food">Similiar Food</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="accurate">Accurate: %1$s</string>
    <string name="failed_get_data">Failed Get Data: %1$s</string>
    <string name="map_icon">Map Icon</string>
</resources>